# Effristor

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
ivf/: __init__.py  _data.py  _model.py  _module.py  _train.py  _utils.py
ivf/task/: README.md  data.2025.xlsx  data.20250829.xlsx  data.xlsx  dataset82  predict_and_evaluate.py  run.py
ivf/task/analyse/: README.md  analyse.ipynb  benckmark.py  consecutive_feature_distribution.csv  discrete_feature_distribution.csv  distribution_analyse.ipynb  interpret.py  interpret_result.csv  predict_and_evaluate.py  predictions.20250829.csv  predictions.csv  predictions.hgb.csv  run.py  suggest.csv  suggest.py  suggest.sh  suggest_1.csv  suggest_10.csv  suggest_11.csv  suggest_12.csv  suggest_13.csv  suggest_14.csv  suggest_2.csv  suggest_3.csv  suggest_4.csv  suggest_5.csv  suggest_6.csv  suggest_7.csv  suggest_8.csv  suggest_9.csv
ivf/task/analyse/benchmark/: predictions.0.2025.csv  predictions.0.csv  predictions.0.hgb.2025.csv  predictions.0.hgb.csv  predictions.0.lr.2025.csv  predictions.0.lr.csv  predictions.0.rf.2025.csv  predictions.0.rf.csv  predictions.0.tab.2025.csv  predictions.0.tab.csv  predictions.1.2025.csv  predictions.1.csv  predictions.1.hgb.2025.csv  predictions.1.hgb.csv  predictions.1.lr.2025.csv  predictions.1.lr.csv  predictions.1.rf.2025.csv  predictions.1.rf.csv  predictions.1.tab.2025.csv  (+140 more)
ivf/task/dataset/: dataset_0  dataset_1  dataset_10  dataset_11  dataset_12  dataset_13  dataset_14  dataset_2  dataset_3  dataset_4  dataset_5  dataset_6  dataset_7  dataset_8  dataset_9
(+32 files in other folders)
