[project]
name = "ivf"
version = "0.1.0"
description = ""
authors = [
    {name = "liminghong.dev", email = "liminghong.dev@gmail.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"


[tool.poetry.dependencies]
scvi-tools = "^1.2.2.post2"
openpyxl = "^3.1.5"
neptune = "^1.13.0"
imblearn = "^0.0"
matplotlib = "^3.10.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
flake8-black = "^0.3.6"
isort = "^6.0.0"
flake8-isort = "^6.1.2"
pytest-cov = "^6.0.0"
poethepoet = "^0.32.2"
nbqa = "^1.9.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
